--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,30 @@
 :root{ 
 --Blue: hsl(246, 80%, 60%);
---Light-red: hsl(15, 100%, 70%); /*(work)*/
+--Light-orange: hsl(15, 100%, 70%); /*(work)*/
 --Soft-blue: hsl(195, 74%, 62%); /*(play)*/
 --Light-red: hsl(348, 100%, 68%); /*(study)*/
 --Lime-green: hsl(145, 58%, 55%); /*(exercise)*/
 --Violet: hsl(264, 64%, 52%); /*(social)*/
---Soft-orange: hsl(43, 84%, 65%); /*(self care)*/
+--Soft-yellow: hsl(43, 84%, 65%); /*(self care)*/
 --Very-dark-blue: hsl(226, 43%, 10%);
 --Dark-blue: hsl(235, 46%, 20%);
 --Desaturated-blue: hsl(235, 45%, 61%);
 --Pale-Blue: hsl(236, 100%, 87%);
+
 }
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    /* text-align: center; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.App{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas: 
+  "profile card card card"
+  "profile card card card";
+  gap: 1rem;
+  height: 450px;
 }
